[tool.poetry]
name = "frequenceaseapi"
version = "0.1.0"
description = ""
authors = ["Justin Fischer <jfischer@adadapted.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
soundfile = "^0.12.1"
scipy = "^1.11.3"
flask = "^3.0.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
